--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "lodash": "^4.6.1",
     "mongoose": "^4.4.6",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-http-bearer": "^1.0.1",
     "request": "^2.69.0"
   }
 }
